--- a/styles.scss
+++ b/styles.scss
@@ -1,17 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Special+Elite&display=swap');
+
 body {
     margin: 0;
+    font-family: 'Oswald', sans-serif;
 }
 
 h1 {
     background: rgb(20, 58, 83);
     color: white;
     padding: 1em .5em;
-    font-size: 3em;
     margin: 0;
-    font-family: 'Oswald', sans-serif;
 }
 
-.notes {
+.notes a {
     font-family: 'Special Elite', cursive; 
+    text-decoration: none;
+    color: black;
+
+    &:hover {
+        color: rgb(252, 188, 133);
+    }
+}
+
+@media only screen and (min-width: 700px) {
+    h1 {
+        font-size: 3em;
+    }
 }
