--- a/week1/styles.scss
+++ b/week1/styles.scss
@@ -15,9 +15,12 @@ h1 {
     margin: 0;
 }
 
+h2 {
+    font-family: 'Special Elite', cursive;
+}
+
 .columns {
     margin: 1em 1em;
-    font-family: 'Special Elite', cursive;
 }
 
 @media only screen and (min-width: 700px) {
